--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,19 @@
   display: flex;
   -ms-flex-line-pack: center;
       align-content: center;
-  background-image: url("../img/bg-img.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  position: relative;
+  overflow-y: hidden;
+}
+
+.welcome .main-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100vw;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .welcome__image {
